# MultiCue-Background-Modeling

./: CMakeLists.txt  IBGS.h  Main.cpp  MultiCue.cpp  README.md  algorithms.h  mainWindow.cpp  mainWindow.h
